Modify index.html, create recipe html
Modify index. Add description sub-headings and placeholder texts. Add
links to all recipe sub-pages.

Create html for alla-gricia, amatriciana, cacio-e-pepe, carbonara.
Add headings and ingredients. Draft instructions. Placeholder text for
main description. Add back-to-home link.

Practice good Commit habits.

--- a/index.html
+++ b/index.html
@@ -7,16 +7,21 @@
 </head>
 <body>
     <h1>ODIN RECIPES</h1>
+    <dl>
+        <dd><b>> <a href="./pages/cacio-e-pepe.html">Cacio e Pepe</a></b></dd>
+        <dd><b>> <a href="./pages/alla-gricia.html">Alla Gricia</a></b></dd>
+        <dd><b>> <a href="./pages/carbonara.html">Carbonara</a></b></dd>
+        <dd><b>> <a href="./pages/amatriciana.html">Amatriciana</a></b></dd>
+    </dl>
     <hr>
     <h2>The Four Pastas of Rome</h2>
         <p>Intro Paragraph Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat officiis, eius quo nostrum quam doloremque maxime distinctio sapiente obcaecati maiores molestiae non voluptates sint nesciunt. Repellendus veniam provident maiores laudantium.
     Minus dolore alias dicta eaque soluta ea, sapiente facere, rem aliquid illo fugit. Dolores iusto illum provident laudantium ducimus error asperiores. Reiciendis placeat voluptatem aliquam architecto voluptatibus molestiae quasi adipisci?</p>
-    <h2>Recipes:</h2>
-        <ul>
-            <li>Cacio e Pepe</li>
-            <li>Alla Gricia</li>
-            <li>Carbonara</li>
-            <li>Amatriciana</li>
-        </ul>
+    <h2>let pasta = {}</h2>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus dolores quia quibusdam fugit enim praesentium porro? Culpa, enim cupiditate reprehenderit dolor quis, blanditiis velit omnis ea veniam, placeat inventore! Placeat.</p>
+    <h3>Code:</h3>
+        <dl>
+            <dd>function romanPasta() {
+        </dl>
 </body>
-</html> 
+</html>
