Modify index & cacio-e-pepe
index.html: Add cooking tips and disclaimer headings, add code image.
Completed introductory paragraphs.

cacio-e-pepe.html: Modified paragraphs. Introductory, ingredients &
instructions completed.

--- a/index.html
+++ b/index.html
@@ -7,21 +7,24 @@
 </head>
 <body>
     <h1>ODIN RECIPES</h1>
-    <dl>
-        <dd><b>> <a href="./pages/cacio-e-pepe.html">Cacio e Pepe</a></b></dd>
-        <dd><b>> <a href="./pages/alla-gricia.html">Alla Gricia</a></b></dd>
-        <dd><b>> <a href="./pages/carbonara.html">Carbonara</a></b></dd>
-        <dd><b>> <a href="./pages/amatriciana.html">Amatriciana</a></b></dd>
-    </dl>
     <hr>
-    <h2>The Four Pastas of Rome</h2>
-        <p>Intro Paragraph Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat officiis, eius quo nostrum quam doloremque maxime distinctio sapiente obcaecati maiores molestiae non voluptates sint nesciunt. Repellendus veniam provident maiores laudantium.
-    Minus dolore alias dicta eaque soluta ea, sapiente facere, rem aliquid illo fugit. Dolores iusto illum provident laudantium ducimus error asperiores. Reiciendis placeat voluptatem aliquam architecto voluptatibus molestiae quasi adipisci?</p>
-    <h2>let pasta = {}</h2>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus dolores quia quibusdam fugit enim praesentium porro? Culpa, enim cupiditate reprehenderit dolor quis, blanditiis velit omnis ea veniam, placeat inventore! Placeat.</p>
-    <h3>Code:</h3>
+    <h2><u>The Four Pastas of Rome</u></h2>
+        <p>Traditional. Class. Simple. Whipping up any one of the "Roman Big Four" for a dinner party, or a date that you somehow managed to convince that you aren't <i>that</i> creepy to warrant that they should stay at least a hundred feet away from you house, will make you look like a much better chef than you actually are. The key to making these pastas is the quality of ingredients. So try not to be stingy on splurging for good San Marzano tomatoes, for example. And, always, a pinch of love to taste.</p>
+    <h2><u>Cooking Tips</u></h2>
+        <p>The receipes assume you have at least two stoves to simultaneously boil your pasta and make the sauce. If you are like myself and are unable to afford the rental rates of a flat that has dual wielding burners, then I would suggest that you boil the pasta <b>after</b> making the sauce. Also, reduce the cooking time of your pasta by about a minute from the package instructions since you want to finish cooking it off in the saucepan.</p>
+        <p>Also, <b>NEVER</b> drain your pasta. Save your pasta water as this will be used to "add" creaminess to your sauce.</p>
+    <h3>Disclaimer</h3>
+        <p>Not a professional chef. Also not Italian.</p>
+    <h2><u>Recipes</u></h2>
         <dl>
-            <dd>function romanPasta() {
-        </dl>
+            <dd><b>> <a href="./pages/cacio-e-pepe.html">Cacio e Pepe</a></b></dd>
+            <dd><b>> <a href="./pages/alla-gricia.html">Alla Gricia</a></b></dd>
+            <dd><b>> <a href="./pages/carbonara.html">Carbonara</a></b></dd>
+            <dd><b>> <a href="./pages/amatriciana.html">Amatriciana</a></b></dd>
+        </dl>    
+    <h2><u></u>const pasta = {}</u></h2>
+        <p>What I find coolest about the Roman Pastas, is that because the recipes share a lot of <del>variables</del> ingredients, it is quite easy to summarize it into code. But as much as I would like to code a constructor that takes the object-keys of <b>class pantryItems {</b> to determine whether we have enough to make any of the four pastas, my coding skills are <em><b>very</b></em> limited as at the creation of this project. Thus, I have made a simple function (see below, although, tbh could be wrong) that takes boolean values of the key ingredients as its parameters to determine whether carbonara is on the menu tonight. Pasta la vista, <i>baby</i>.</p>
+    <h2><u>Pasta a la Code</u></h2>
+        <img src="./img/code.jpg" alt="Code for making Roman Pasta">
 </body>
-</html>
+</html>     
