--- a/pages/cacio-e-pepe.html
+++ b/pages/cacio-e-pepe.html
@@ -10,7 +10,7 @@
     <h1>Cacio e Pepe</h1>
     <img src="../img/cacio-e-pepe.jpeg" alt="Cacio e Pepe Pasta" height="350" width="500">
     <h2>Mother Pasta</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente omnis unde qui natus excepturi quo aliquam rem repellat enim voluptatem facilis, dolor odio, adipisci optio laborum exercitationem magni ullam est?</p>
+        <p>Spaghetti. Cheese. Pepper. Or as I like to call it, the mac and cheese for grown ups. All it requires is three ingredients and you're good to go. If you are familiar with mother saucues, the Cacio e Pepe is exactly that in the Roman Pasta world- the base form where all good pastas come from. Or if you like, the unevolved form of a three-stage evolution pasta.</p>
     <h3>Ingredients</h3>
         <ul>
             <li>250g Spaghetti</li>
@@ -18,12 +18,13 @@
             <li>7g fresh ground pepper</li>
         </ul>
     <h3>Instructions</h3>
-        <ol>
-            <li>Boil Pasta</li> <!--update ingredients later-->
-            <li>Add Cheese</li>
-            <li>Add Pepper</li>
-            <li>Mix in mouth</li>
-            <li>Eat</li>
+        <o>
+            <li>In a large pot, boil water and once it comes to a boil, salt the water (about 1 tbsp for every liter of water). <i>See <a href="../index.html">Cooking Tips</a>.</i></li>
+            <li>In a saucepan, toast your black pepper for two minues under low heat. This step is preferred, but optional.</li>
+            <li>In a seperate mixing bowl, grate your Pecorino Romano then add the black pepper. Mix together.</li>
+            <li>Once the pasta is cooked, transfer the pasta to a saucepan and turn on the heat to low. Don't worry about the excess water clinging on the spaghetti. In fact, you want this as this will add starch to your sauce making it extra creamy.</li>
+            <li>Add the cheese and pepper into the saucepan, continously stirring over to low heat. Add pasta water by the tablespoon until the sauce has your preferred consistency.</li>
+            <li>Once cooked, plate the pasta. Add pepper to taste and top with more grated Pecorino.</li>
         </ol>
 </body>
 </html>
