--- a/pages/amatriciana.html
+++ b/pages/amatriciana.html
@@ -7,29 +7,34 @@
 </head>
 <body>
     <a href="../index.html">&#127968; Return to Home</a>
-    <h1>Carbonara</h1>
+    <h1>Amatriciana</h1>
     <img src="../img/amatriciana.jpg" alt="Amatriciana" height="350" width="500">
     <h2>The Forgotten One</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente omnis unde qui natus excepturi quo aliquam rem repellat enim voluptatem facilis, dolor odio, adipisci optio laborum exercitationem magni ullam est?</p>
+        <p>Arguably, the most complex out of all the Roman Pastas. Fresh tomatoes. Reduced wine. Red peppers. But no matter how much it tries to shine, it seems to always find itself in the shadow of its <b>more</b> popular sibling.</p>
     <h3>Ingredients</h3>
         <ul>
             <li>250g Spaghetti</li>
-            <li>125g Pecorino Romano</li>
+            <li>72.5g Pecorino Romano</li>
             <li>125g Guanciale</li>
             <li>1 can (750g) San Marzano whole tomatoes</li>
-            <li>50ml white wine (optional)</li>
             <li>7g fresh ground pepper</li>
+            <li>50ml white wine (optional)</li>
+            <li>Red pepper flakes (optional)</li>
+            <li>Fresh basil leaves for garnish (optional)</li>
+            <li>Salt (for seasoning)</li>
         </ul>
     <h3>Instructions</h3>
         <ol>
-            <li>Fry Guanciale</li>
-            <li>Boil Pasta</li> <!--update ingredients later-->
-            <li>Reduce Wine</li>
-            <li>Add Tomatoes</li>
-            <li>Add Cheese</li>
-            <li>Add Pepper</li>
-            <li>Mix in mouth</li>
-            <li>Eat</li>
+            <li>In a large pot, boil water and once it comes to a boil, salt the water (about 1 tbsp for every liter of water). <i>See <a href="../index.html">Cooking Tips</a>.</i></li>
+            <li>Slice guanciale into small cubes. Pro tip: toss it into your freezer for a bit resulting in a hardened fat which makes it easier to dice.</li>
+            <li>Add guanciale into your saucepan, cooking it until your preferred crispiness.</li>
+            <li>Remove guanciale and place it on a plate. Leave about a tbsp of fat and pour out any excess from the pan into a container.</li>
+            <li>Add white wine and deglaze the pan. Reduce to about 25% of original volume.</li>
+            <li>Adjust heat to low and add in your tomatoes, red peppers and black pepper. Season with salt if desired. Bring to a simmer.</li>
+            <li>Once the pasta is cooked, transfer the pasta to the saucepan. Don't worry about the excess water clinging on the spaghetti. In fact, you want this as this will add starch to your sauce making it extra creamy.</li>
+            <li>Set aside a few pieces of guanciale (for garnish), then add back the guanciale to your pan along with the Pecorino Romano.</li>
+            <li>Stir continously over low heat. Add pasta water by the tablespoon until the sauce has your preferred consistency. I like to add a tbsp of the oil set aside earlier for extra flavor.</li>
+            <li>Plate your pasta, add pepper to taste and top with more grated Pecorino. Garnish with the extra pieces of guanciale and fresh basil.</li>
         </ol>
 </body>
 </html>
