--- a/pages/cacio-e-pepe.html
+++ b/pages/cacio-e-pepe.html
@@ -10,7 +10,7 @@
     <h1>Cacio e Pepe</h1>
     <img src="../img/cacio-e-pepe.jpeg" alt="Cacio e Pepe Pasta" height="350" width="500">
     <h2>Mother Pasta</h2>
-        <p>Spaghetti. Cheese. Pepper. Or as I like to call it, the mac and cheese for grown ups. All it requires is three ingredients and you're good to go. If you are familiar with mother saucues, the Cacio e Pepe is exactly that in the Roman Pasta world- the base form where all good pastas come from. Or if you like, the unevolved form of a three-stage evolution pasta.</p>
+        <p>Spaghetti. Cheese. Pepper. Or as I like to call it, the mac and cheese for grown ups. All it requires is three ingredients and you're good to go. If you are familiar with mother sauces, the Cacio e Pepe is exactly that in the Roman Pasta world- the base form where all good pastas come from.</p>
     <h3>Ingredients</h3>
         <ul>
             <li>250g Spaghetti</li>
