--- a/pages/amatriciana.html
+++ b/pages/amatriciana.html
@@ -25,14 +25,14 @@
         </ul>
     <h3>Instructions</h3>
         <ol>
-            <li>In a large pot, boil water and once it comes to a boil, salt the water (about 1 tbsp for every liter of water). <i>See <a href="../index.html">Cooking Tips</a>.</i></li>
+            <li>In a large pot, boil your pasta, adding salt to the water (about 1 tbsp for every liter). <i>See <a href="../index.html">Cooking Tips</a>.</i></li>
             <li>Slice guanciale into small cubes. Pro tip: toss it into your freezer for a bit resulting in a hardened fat which makes it easier to dice.</li>
             <li>Add guanciale into your saucepan, cooking it until your preferred crispiness.</li>
             <li>Remove guanciale and place it on a plate. Leave about a tbsp of fat and pour out any excess from the pan into a container.</li>
-            <li>Add white wine and deglaze the pan. Reduce to about 25% of original volume.</li>
+            <li>Add white wine and deglaze the pan. Reduce the liquid until it is about 25% of original volume.</li>
             <li>Adjust heat to low and add in your tomatoes, red peppers and black pepper. Season with salt if desired. Bring to a simmer.</li>
             <li>Once the pasta is cooked, transfer the pasta to the saucepan. Don't worry about the excess water clinging on the spaghetti. In fact, you want this as this will add starch to your sauce making it extra creamy.</li>
-            <li>Set aside a few pieces of guanciale (for garnish), then add back the guanciale to your pan along with the Pecorino Romano.</li>
+            <li>Set aside a few pieces of guanciale (for garnish), then add back the guanciale to your pan along with the grated Pecorino Romano.</li>
             <li>Stir continously over low heat. Add pasta water by the tablespoon until the sauce has your preferred consistency. I like to add a tbsp of the oil set aside earlier for extra flavor.</li>
             <li>Plate your pasta, add pepper to taste and top with more grated Pecorino. Garnish with the extra pieces of guanciale and fresh basil.</li>
         </ol>
