--- a/pages/cacio-e-pepe.html
+++ b/pages/cacio-e-pepe.html
@@ -19,7 +19,7 @@
         </ul>
     <h3>Instructions</h3>
         <o>
-            <li>In a large pot, boil water and once it comes to a boil, salt the water (about 1 tbsp for every liter of water). <i>See <a href="../index.html">Cooking Tips</a>.</i></li>
+            <li>In a large pot, boil your pasta, adding salt to the water (about 1 tbsp for every liter). <i>See <a href="../index.html">Cooking Tips</a>.</i></li>
             <li>In a saucepan, toast your black pepper for two minues under low heat. This step is preferred, but optional.</li>
             <li>In a seperate mixing bowl, grate your Pecorino Romano then add the black pepper. Mix together.</li>
             <li>Once the pasta is cooked, transfer the pasta to a saucepan and turn on the heat to low. Don't worry about the excess water clinging on the spaghetti. In fact, you want this as this will add starch to your sauce making it extra creamy.</li>
