--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <h1>ODIN RECIPES</h1>
     <hr>
     <h2><u>The Four Pastas of Rome</u></h2>
-        <p>Traditional. Class. Simple. Whipping up any one of the "Roman Big Four" for a dinner party, or a date that you somehow managed to convince that you aren't <i>that</i> creepy to warrant that they should stay at least a hundred feet away from you house, will make you look like a much better chef than you actually are. The key to making these pastas is the quality of ingredients. So try not to be stingy on splurging for good San Marzano tomatoes, for example. And, always, a pinch of love to taste.</p>
+        <p>Traditional. Class. Simple. Whipping up any one of the "Roman Big Four" for a dinner party, or for a date that you somehow managed to convince that you aren't <i>that</i> creepy to warrant that they should avoid your place at all costs. These will make you look like a much better chef than you actually are. The key to making these pastas is the quality of ingredients. So try not to be stingy on splurging for good San Marzano tomatoes, for example. And, always, a pinch of love to taste.</p>
     <h2><u>Cooking Tips</u></h2>
-        <p>Traditionalists will argue what the correct pasta type is to use. Living in Asia, it is my experience that you do not always have access to what would be traditionally correct. You can do your own research and check what would was originally used and see if it's available in your area. Ultimately, just use what is accessible.</p>
-        <p>Also, the receipes assume you have at least two stoves to simultaneously boil your pasta and make the sauce. If you are like myself and are unable to afford the rental rates of a flat that has dual wielding burners, then I would suggest that you boil the pasta <b>after</b> making the sauce. Also, reduce the cooking time of your pasta by about a minute from the package instructions since you want to finish cooking it off in the saucepan.</p>
-        <p>Plus, <b>NEVER</b> drain your pasta. Save your pasta water as this will be used to "add" creaminess to your sauce.</p>
+        <p>Traditionalists will argue what the correct pasta type is to use. Living in Asia, it is my experience that you do not always have access to what would be considered traditionally correct. You can do your own research and check what would was originally used and see if it's available in your area. Ultimately, just use what is accessible.</p>
+        <p>Also, the recipes assume you have at least two stoves to simultaneously boil your pasta and make the sauce. If you are like myself and are unable to afford the rental rates of a flat that has dual wielding burners, then I would suggest that you boil the pasta <b>after</b> making the sauce. Also, reduce the cooking time of your pasta by about a minute from the package instructions since you want to finish cooking it off in the saucepan.</p>
+        <p><b>NEVER</b> drain your pasta. Save your pasta water as this will be used to "add" creaminess to your sauce.</p>
         <p>Finally, if Pecorino is too expensive or unavailable, just use store bought Parmesan. Beats not making anything in my opinion.</p>
     <h3>Disclaimer</h3>
-        <p>Not a professional chef. Also not Italian.</p>
+        <p>Not a professional chef. Also not an Italian.</p>
     <h2><u>Recipes</u></h2>
         <dl>
             <dd><b>> <a href="./pages/cacio-e-pepe.html">Cacio e Pepe</a></b></dd>
