--- a/pages/carbonara.html
+++ b/pages/carbonara.html
@@ -10,7 +10,7 @@
     <h1>Carbonara</h1>
     <img src="../img/carbonara.jpg" alt="Carbonara Pasta" height="350" width="500">
     <h2>The Favourite Child</h2>
-        <p>Everybody's favorite which makes it the youngest in the family. The one where rules don't apply. Cream? Milk? Mushroom? <i>That's not how it's supposed to be!</i>. Who cares? Carbonara does what it wants whenever it wants. It has the <del>balls</del> eggs to do so.</p>
+        <p>Everybody's favorite. The one where rules don't apply. Cream? Milk? Mushroom? <i>That's not how it is supposed to be made!</i>. Who cares? Carbonara does what it wants, whenever it wants. It has the <del>balls</del> eggs to do so.</p>
     <h3>Ingredients</h3>
         <ul>
             <li>250g Spaghetti</li>
@@ -25,13 +25,13 @@
             <li>Slice guanciale into small cubes. Pro tip: toss it into your freezer for a bit resulting in a hardened fat which makes it easier to dice.</li>
             <li>Add guanciale into your pan, cooking it until your preferred crispiness.</li>
             <li>Remove guanciale and place it on a plate. Pour out any excess fat from the pan into a container.</li>
-            <li>In a large pot, boil water and once it comes to a boil, salt the water (about 1 tbsp for every liter of water). <i>See <a href="../index.html">Cooking Tips</a>.</i></li>
-            <li>In a seperate mixing bowl, crack your in eggs. I toss in an extra yolk for that added creaminess. Whisk well.</li> 
+            <li>In a large pot, boil your pasta, adding salt to the water (about 1 tbsp for every liter). <i>See <a href="../index.html">Cooking Tips</a>.</i></li>
+            <li>In a seperate mixing bowl, crack in your eggs. I toss in an extra egg yolk for that added creaminess. Whisk well.</li> 
             <li>In the same bowl, grate in your Pecorino Romano then add the black pepper. Mix together.</li>
-            <li>Once the pasta is cooked, transfer the pasta to the bowl and mix well, scooping up the mixture from the sides. Don't worry about the excess water clinging on the spaghetti. In fact, you want this as this will add starch to your sauce making it extra creamy.</li>
+            <li>Once the pasta is cooked, transfer the pasta to the bowl and stir well. Make sure you scoop up the mixture from the sides. Don't worry about the excess water clinging on the spaghetti. In fact, you want this as this will add starch to your sauce making it extra creamy.</li>
             <li>Add everything back to the saucepan and turn on the heat to low.</li>
-            <li>Stir continously over  low heat. Add pasta water by the tablespoon until the sauce has your preferred consistency.</li>
-            <li>Set aside a few pieces of guanciale (for garnish) before adding the rest into your pasta. Toss a few times. I like to add a tbsp of the oil set aside earlier for extra flavor.</li>
+            <li>Stir continously over low heat. Add pasta water by the tablespoon until the sauce has your preferred consistency.</li>
+            <li>Set aside a few pieces of guanciale (for garnish) before adding the rest into your pasta. Toss a few times. I like to add a tbsp of the guanciale set aside earlier for extra flavor.</li>
             <li>Plate your pasta, add pepper to taste and top with more grated Pecorino. Garnish with the extra pieces of guanciale.</li>
         </ol>
 </body>
